[2.7] bpo-31411: Prevent raising a SystemError in case warnings.onceregistry is not a dictionary. (GH-3485). (cherry picked from commit 252033d50effa08046ac34fcc406bc99796ab88b)